le agregue un media

--- a/Boostrap x r30 website modelo.html
+++ b/Boostrap x r30 website modelo.html
@@ -83,7 +83,7 @@
             <li role="separator" class="divider"></li>
             <li><a href="http://foldway.com/#1">Olivos</a></li>
             <li role="separator" class="divider"></li>
-            <li><a href="http://foldway.com/#1">Interior del Pais</a></li>
+
           </ul>
         </li>
       </ul>
@@ -314,6 +314,24 @@
 
   </div>
   </div>
+
+
+
+  <div class="media">
+      <div class="media-left media-middle">
+        <a href="#">
+          <img class="media-object" src="http://www.thorusa.com/tern/vergex30.jpg" alt="..." width="150px">
+        </a>
+      </div>
+      <div class="media-body">
+        <h4 class="media-heading">Middle aligned media</h4>
+...Middle aligned media  Middle aligned media  Middle aligned media  Middle aligned media  Middle aligned media
+..Middle aligned media  Middle aligned media  Middle aligned media  Middle aligned media  Middle al
+...Middle aligned media  Middle aligned media  Middle aligned media  Middle aligned media  Middle aligned media
+
+</div>
+</div>
+
 
 
   <div class="media">
